--- a/07_Simulacao_Do_Transito_Automato/view/main_view.fxml
+++ b/07_Simulacao_Do_Transito_Automato/view/main_view.fxml
@@ -67,7 +67,7 @@
                   <Image url="@../img/routes/warRoute.png" />
                </image></ImageView>
             <Label fx:id="selectedText" layoutX="38.0" layoutY="246.0" prefHeight="34.0" prefWidth="172.0" text="Warrior" textFill="#b9b9b9" />
-            <Slider fx:id="speedSlider" layoutX="12.0" layoutY="705.0" max="30.0" min="3.0" prefHeight="14.0" prefWidth="214.0" rotate="180.0" value="5.0" />
+            <Slider fx:id="speedSlider" layoutX="12.0" layoutY="705.0" max="30.0" min="1.0" prefHeight="14.0" prefWidth="214.0" rotate="180.0" value="5.0" />
             <Label fx:id="attLabel" layoutX="68.0" layoutY="373.0" prefHeight="21.0" prefWidth="46.0" text="75" textFill="#fff400">
                <font>
                   <Font name="System Bold" size="14.0" />
@@ -102,6 +102,6 @@
             <Button fx:id="pauseButton" layoutX="175.0" layoutY="442.0" mnemonicParsing="false" text="Pause" />
          </children>
       </AnchorPane>
-      <Label layoutX="241.0" layoutY="14.0" prefHeight="34.0" prefWidth="505.0" text="Para mudar a velocidade de uma classe, clique na imagem em movimento dela" />
+      <Label layoutX="-1.0" layoutY="2.0" prefHeight="34.0" prefWidth="947.0" text="Para mudar a velocidade de uma classe, clique na imagem em movimento dela, nao me responsabilizo se voce deixar rapido demais e nao conseguir clicar depois" />
    </children>
 </AnchorPane>
